classDiagram
%% ------------- DOMAIN -------------
class Bus {
    +BusId: string
    +Model: BusModel
    +Route: RouteName
    +BatteryCapacity: double
    +BatteryLevel: double
    +Consumption: double
    +Status: BusStatus
    +IsCritical: bool                      /* BatteryLevel < 30 */
    +TimeLeftUntil13Percent(avgKmh: double): TimeSpan
    +EstimateChargeTime(rateKW: double): TimeSpan
}
 
class BusModel   { <<enumeration>> }
class RouteName  { <<enumeration>> }
class BusStatus  { <<enumeration>> }
Bus --> BusModel
Bus --> RouteName
Bus --> BusStatus
 
%% ------------- FILE I/O -------------
class FileHelper {
    +SaveBusesAsync(buses: IEnumerable~Bus~): Task
    +LoadBusesAsync(): Task<List~Bus~>
}
 
%% ------------- SERVICE -------------
class SimulationService {
    +Buses: ObservableCollection~Bus~
    +Start(): void
    +Stop(): void
    +SimulateTick(): void
    +CriticalAlert: event                 /* raised when IsCritical turns true */
}
SimulationService --> Bus
 
%% ------------- VIEW-MODELS -------------
class BusListViewModel {
    -fileHelper: FileHelper
    -simService: SimulationService
    +Buses: ObservableCollection~Bus~
    +AddCmd(): void
    +EditCmd(): void
    +DeleteCmd(): void    
    +FilterLow(threshold): IEnumerable~Bus~
    +Search(busId): Bus
    +SortRunning(): IEnumerable~Bus~    
    +UpdateBatteryCmd(bus): void    
    +ShowCriticalCmd(): void
    +MarkChargingCmd(bus): void
    +MarkReadyCmd(bus): void
    +SuggestCharge(bus): TimeSpan
}
 
class AddEditBusViewModel {
    -fileHelper: FileHelper
    +Bus: Bus
    +IsNew: bool
    +SaveCmd(): Task
    +CancelCmd(): void
}
 
class UpdateBatteryViewModel {
    -fileHelper: FileHelper
    +Bus: Bus
    +NewLevel: double
    +SaveCmd(): Task
    +CancelCmd(): void
}
 
class BusDetailViewModel {
    +SelectedBus: Bus
    +EstimateChargeCmd(): void
}
 
class MainViewModel {
    -fileHelper: FileHelper
    +BusListVM: BusListViewModel
    +BusDetailVM: BusDetailViewModel
    +InitializeAsync(): Task              /* loads buses, starts simulation */
}
 
%% ------------- RELATIONS -------------
MainViewModel --> BusListViewModel
MainViewModel --> BusDetailViewModel
 
BusListViewModel ..> FileHelper          : load / save
BusListViewModel ..> SimulationService
AddEditBusViewModel ..> FileHelper       : save
UpdateBatteryViewModel ..> FileHelper    : save
 
BusListViewModel --> Bus
BusDetailViewModel --> Bus